basic task api implemented

--- a/src/main/resources/application-template.properties
+++ b/src/main/resources/application-template.properties
@@ -1,7 +1,6 @@
 # Rename/Copy this file to application.properties
 # Sever Configuration
 server.port=8080
-
 # Postgres Configuration
 spring.datasource.url=jdbc:postgresql://${HOST:localhost}:${PORT:5432}/${DATABASE:task_manager}
 spring.datasource.username=${DBUSER:<dbUser>}
@@ -10,3 +9,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.show-sql=true
+# JWT
+jwt.secret=<salt>
